--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "xqtime",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "This is a js time-friendly plugin.",
-  "main": "dist/xqtime.js",
+  "main": "./dist/xqtime.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./webpack.config.js",
@@ -27,5 +27,10 @@
   "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "babel-loader": "^8.2.5"
   }
 }
