--- a/package.json
+++ b/package.json
@@ -1,36 +1,30 @@
 {
   "name": "xqtime",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "This is a js time-friendly plugin.",
-  "main": "./dist/xqtime.js",
+  "main": "lib/xqtime.js",
+  "directories": {
+      "lib": "lib",
+      "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config ./webpack.config.js",
-    "dev:all": "node test/all.js",
-    "dev:one": "node test/one.js"
+      "test": "echo Error: no test specified && exit 1",
+      "test:node": "node test/node.js",
+      "test:browser": "live-server --port=4001 --host=localhost"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gitguanqi/xqtime.git"
+      "type": "git",
+      "url": "git+https://github.com/gitguanqi/xqtime.git"
   },
   "keywords": [
-    "time",
-    "xqtime",
-    "date"
+      "time",
+      "date",
+      "xqtime"
   ],
   "author": "gitguanqi",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gitguanqi/xqtime/issues"
+      "url": "https://github.com/gitguanqi/xqtime/issues"
   },
-  "homepage": "https://github.com/gitguanqi/xqtime#readme",
-  "devDependencies": {
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "dependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/preset-env": "^7.19.1",
-    "babel-loader": "^8.2.5"
-  }
+  "homepage": "https://github.com/gitguanqi/xxx#readme"
 }
